Correct a typo in the manual

--- a/Manual/The High Score.html
+++ b/Manual/The High Score.html
@@ -43,7 +43,7 @@
                             <br><span style="font-style: italic;">(The arrow buttons can be held down to quickly cycle through characters.)</span></li>
                         <li>When the third character in the name is entered, the name will be automatically submitted.</li>
                         <li>Using the table below, start at the index that matches the first character in the serial number. Numbers are prefixed with #.</li>
-                        <li>Evauluate the condition for that row, and if it is true, apply the corresponding rule. Then move down to the next row.</li>
+                        <li>Evaluate the condition for that row, and if it is true, apply the corresponding rule. Then move down to the next row.</li>
                         <li>Continue evaluating rows until all three characters of the name have been defined, then submit that name to disarm the module.</li>
                         <li><strong>See Appendix S1N1-S74R for clarifications on the rules.</strong></li>
                     </ul>
